# cloudflare-warp-toggle

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  uninstall.sh  warp-toggle.desktop.template  warp_toggle.py
src/: constants.py  styles.py  tray.py
src/tabs/: __init__.py  account_tab.py  connection_tab.py  settings_tab.py  setup_tab.py  stats_tab.py
src/tabs/sections/: __init__.py  base.py  dns_section.py  license_section.py  mode_section.py  network_section.py  tunnel_section.py
src/warp_cli/: __init__.py  account.py  core.py  settings.py  status.py  tunnel.py
src/widgets/: __init__.py  status_indicator.py  toggle_switch.py
tests/: conftest.py  test_constants.py  test_warp_cli.py
